[package]
name = "mio-timerfd"
version = "0.1.2"
authors = ["Terry Kerr <terry@oefd.ca>"]
edition = "2018"
description = "mio support for linux's timerfd"
repository = "https://github.com/oefd/mio-timerfd"
documentation = "https://docs.rs/mio-timerfd"
keywords = ["asynchronous", "mio", "timerfd", "timer", "linux"]
categories = ["asynchronous"]
license = "MIT"

[badges]
travis-ci = { repository = "oefd/mio-timerfd", branch = "master" }

[dependencies]
mio = "0.6"
libc = "0.2"
