[package]
name = "mio-timerfd"
version = "0.2.0"
authors = ["Terry Kerr <terry@oefd.ca>"]
edition = "2018"
description = "mio support for linux's timerfd"
repository = "https://github.com/oefd/mio-timerfd"
documentation = "https://docs.rs/mio-timerfd"
keywords = ["asynchronous", "mio", "timerfd", "timer", "linux"]
categories = ["asynchronous"]
license = "MIT"

[badges]
travis-ci = { repository = "oefd/mio-timerfd", branch = "master" }

[dependencies]
mio = { version = "0.7", features = ["os-util", "os-poll"] }
libc = "0.2"
