[package]
name = "mio-timerfd"
version = "0.2.1"
authors = ["Terry Kerr <terry@oefd.ca>"]
edition = "2021"
description = "mio support for linux's timerfd"
repository = "https://github.com/oefd/mio-timerfd"
documentation = "https://docs.rs/mio-timerfd"
keywords = ["asynchronous", "mio", "timerfd", "timer", "linux"]
categories = ["asynchronous"]
license = "MIT"

[badges]
travis-ci = { repository = "oefd/mio-timerfd", branch = "master" }

[dependencies]
mio = { version = "0.8.6", features = ["os-ext", "os-poll"] }
libc = "0.2"
